; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_sound.c_Sound_Continue.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_sound.c_Sound_Continue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@Sound_enabled = common dso_local global i64 0, align 8
@paused = common dso_local global i64 0, align 8
@FALSE = common dso_local global i64 0, align 8
@last_audio_write_time = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Sound_Continue() #0 {
  %1 = load i64, i64* @Sound_enabled, align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %9

3:                                                ; preds = %0
  %4 = load i64, i64* @paused, align 8
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %9

6:                                                ; preds = %3
  %7 = call i32 (...) @PLATFORM_SoundContinue()
  %8 = load i64, i64* @FALSE, align 8
  store i64 %8, i64* @paused, align 8
  br label %9

9:                                                ; preds = %6, %3, %0
  ret void
}

declare dso_local i32 @PLATFORM_SoundContinue(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
